--- a/recipes/rngkey.html
+++ b/recipes/rngkey.html
@@ -21,7 +21,7 @@
         function modifyString() {
             var inputString = document.getElementById("inputString").value;
             var version1 = inputString+"4146";
-            var version2 = modifyCaseAndSymbols(version1);
+            var version2 = modifyCaseAndSymbols(version1+4146);
             var version3 = "!!"+version2+"!!";
 
             document.getElementById("version1").innerText = "Version 1: " + version1;
