--- a/recipes/rng.html
+++ b/recipes/rng.html
@@ -16,40 +16,55 @@
     <p id="version1"></p>
     <p id="base10Representation1"></p>
     <p id="transformation1"></p>
+    <p id="backToBase69_1"></p>
     <p id="version2"></p>
     <p id="base10Representation2"></p>
     <p id="transformation2"></p>
+    <p id="backToBase69_2"></p>
     <p id="version3"></p>
     <p id="base10Representation3"></p>
     <p id="transformation3"></p>
+    <p id="backToBase69_3"></p>
 
     <script>
         function modifyString() {
             var inputString = document.getElementById("inputString").value;
-            var version1 = inputString +"4146";
-            var version2 = modifyCaseAndSymbols(inputString+"4146");
-            var version3 = "!!"+version2+"!!";
+            var version1 = inputString + "4146";
+            var version2 = modifyCaseAndSymbols(inputString + "4146");
+            var version3 = "!!" + version2 + "!!";
 
-            document.getElementById("version1").innerText = "Version 1:"+version1;
+            document.getElementById("version1").innerText = "Version 1: " + version1;
             var base10Representation1 = convertToBase69(version1);
             document.getElementById("base10Representation1").innerText = "Base 10 Representation: " + base10Representation1;
-            document.getElementById("transformation1").innerText = "Transformation: " + calculateTransformation(base10Representation1, 8);
+            var transformation1 = calculateTransformation(base10Representation1, 8);
+            document.getElementById("transformation1").innerText = "Transformation: " + transformation1;
+            document.getElementById("backToBase69_1").innerText = "Back to Base 69: " + convertBackToBase69(transformation1);
 
-            document.getElementById("version2").innerText = "Version 2:" + version2;
+            document.getElementById("version2").innerText = "Version 2: " + version2;
             var base10Representation2 = convertToBase69(version2);
             document.getElementById("base10Representation2").innerText = "Base 10 Representation: " + base10Representation2;
-            document.getElementById("transformation2").innerText = "Transformation: " + calculateTransformation(base10Representation2, 16);
+            var transformation2 = calculateTransformation(base10Representation2, 16);
+            document.getElementById("transformation2").innerText = "Transformation: " + transformation2;
+            document.getElementById("backToBase69_2").innerText = "Back to Base 69: " + convertBackToBase69(transformation2);
 
-            document.getElementById("version3").innerText = "Version 3:" + version3;
+            document.getElementById("version3").innerText = "Version 3: " + version3;
             var base10Representation3 = convertToBase69(version3);
             document.getElementById("base10Representation3").innerText = "Base 10 Representation: " + base10Representation3;
-            document.getElementById("transformation3").innerText = "Transformation: " + calculateTransformation(base10Representation3, 64);
+            var transformation3 = calculateTransformation(base10Representation3, 64);
+            document.getElementById("transformation3").innerText = "Transformation: " + transformation3;
+            document.getElementById("backToBase69_3").innerText = "Back to Base 69: " + convertBackToBase69(transformation3);
         }
 
         function calculateTransformation(base10Number, charLimit) {
             var x = Math.log(base10Number / 1260) / Math.log(15);
             var xString = x.toFixed(20); // Ensure sufficient precision
             return xString.substring(0, charLimit);
+        }
+
+        function convertBackToBase69(transformation) {
+            var x = parseFloat(transformation);
+            var base10Number = Math.round(1260 * Math.pow(15, x));
+            return convertToBase69(base10Number.toString());
         }
 
         function modifyCaseAndSymbols(inputString) {
