--- a/recipes/calcp.html
+++ b/recipes/calcp.html
@@ -133,28 +133,30 @@
         };
 
         function appendToInput(symbol) {
-        const inputField = document.getElementById('inputField');
-        const currentInput = inputField.value;
+        function appendToInput(symbol) {
+    const inputField = document.getElementById('inputField');
+    const currentInput = inputField.value;
 
-        if (symbol === '.') {
-            const lastChar = currentInput.charAt(currentInput.length - 1);
-            if (!lastChar || ['+', '×', '/'].includes(lastChar)) {
-                inputField.value += '0.';
-            } else if (!currentInput.includes('.')) {
-                inputField.value += '.';
-            }
-        } else if (symbol === '1' || symbol === '0') {
-            // Add binary decimal digits after binary decimal point
-            const regex = /(?:[×/])?[0-9.]+[1-9][0-9]*[b]/;
-            if (regex.test(currentInput)) {
-                inputField.value += symbol;
-            } else {
-                inputField.value += symbol;
-            }
+    if (symbol === '.') {
+        const lastChar = currentInput.charAt(currentInput.length - 1);
+        if (!lastChar || ['+', '×', '/'].includes(lastChar)) {
+            inputField.value += '0.';
+        } else if (!currentInput.includes('.')) {
+            inputField.value += '.';
+        }
+    } else if (symbol === '1' || symbol === '0') {
+        // Add binary decimal digits after binary decimal point
+        const regex = /(?:[×/])?[0-9.]+[1-9][0-9]*[b]/;
+        if (regex.test(currentInput)) {
+            inputField.value += symbol;
         } else {
             inputField.value += symbol;
         }
+    } else {
+        inputField.value += symbol;
     }
+}
+
 
         function balancedToDecimal(pentadecimalStr) {
             let decimalValue = 0;
