--- a/recipes/calcp.html
+++ b/recipes/calcp.html
@@ -136,6 +136,24 @@
     const inpufunction appendToInput(symbol) {
     const inputField = document.getElementById('inputField');
     const currentInput = inputField.value;
+<!-- Inside appendToInput function -->
+if (symbol === '.') {
+    const lastChar = currentInput.charAt(currentInput.length - 1);
+    const hasDecimal = currentInput.includes('.');
+    if (!lastChar || ['+', '×', '/'].includes(lastChar) || !hasDecimal) {
+        inputField.value += '0.';
+    }
+} else if (symbol === '1' || symbol === '0') {
+    // Simplified binary decimal check
+    const regex = /(?:[×/])?[0-9.]+[1-9][0-9]*[b]/;
+    if (regex.test(currentInput) || symbol === '0') {
+        inputField.value += symbol;
+    }
+} else {
+    inputField.value += symbol;
+}
+
+
 
     if (symbol === '.') {
         const lastChar = currentInput.charAt(currentInput.length - 1);
@@ -210,7 +228,13 @@ function decimalToBalanced(decimalValue) {
                 } else {
                     return;
                 }
-
+<!-- Inside calculate function -->
+// Handle more general case for division by zero
+if (operation === '/' && operand2Decimal === 0) {
+    document.getElementById('outputField').value = 'Undefined';
+} else {
+    document.getElementById('outputField').value = resultPentadecimal;
+}
                 const operand1Decimal = balancedToDecimal(operands[0]);
                 const operand2Decimal = balancedToDecimal(operands[1]);
 
